<package>
  <name>ipa_canopen_core</name>
  <version>0.5.4</version>
  <description>

     ROS-independent CANopen C++ library. 
     User manual: https://github.com/ipa320/ipa_canopen/blob/master/ipa_canopen_core/doc/usermanual.pdf?raw=true

  </description>
  <author>Tobias Sing</author>
  <author>Thiago de Freitas</author>
  <maintainer email="tdf@ipa.fhg.de">Thiago de Freitas</maintainer>
  <license>LGPL</license>
  <url>http://ros.org/wiki/ipa_canopen_core</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libpcan</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libpcan</run_depend>

  <export>
    <cpp cflags="-I${prefix}/include -I${prefix}/include/ipa_canopen_core" lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -lipa_canopen_core"/>
  </export>

</package>
